tunneling-outbound-traffic-k8s/samples/https-proxy/sidecar/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-outbound-traffic-to-external-app-via-external-forward-proxy
spec:
  hosts:
  - external-app.external.svc.cluster.local
  gateways:
  - mesh
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: external-forward-proxy.external.svc.cluster.local
        subset: external-app-8080
        port:
          number: 3128
  tls:
  - match:
    - port: 443
      sniHosts:
      - external-app.external.svc.cluster.local
    route:
    - destination:
        host: external-forward-proxy.external.svc.cluster.local
        subset: external-app-443
        port:
          number: 3128
